@@ -1,3 +1,12 @@
+2004-02-02  Marco Gerards  <metgerards@student.han.nl>
+
+	* pc-kbd.c (KDSETLEDS): New macro.
+	(update_leds): Add support for setting the keyboard LED state on
+	GNUMach 1.x (> 1.3).
+
+	(input_loop): Use size_t for `nr' instead of int to silence a gcc
+	warning.
+
 2003-08-11  Marco Gerards  <metgerards@student.han.nl>
 
 	* console.c (cons_vcons_set_dimension): New function.
